fixed overflow of post content paragraph

--- a/css/show_page.css
+++ b/css/show_page.css
@@ -56,6 +56,7 @@
   font-family: "Bebas Neue", cursive;
   color: black;
   font-size: 1.5rem;
+  overflow-wrap: break-word;
 }
 
 .userPostAnchor {
